# berri-recall

./: .gitignore  LICENSE  README.md  berri-recall.rb  install.sh
.github/workflows/: release.yml
database/: schema.sql
hooks/: bash.sh  fish.fish  powershell.ps1  zsh.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/core/: mod.rs  project_detector.rs  recorder.rs  retriever.rs  searcher.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  queries.rs
src-tauri/src/intelligence/: analyzer.rs  context_detector.rs  mod.rs  pattern_detector.rs  scorer.rs  suggestion_engine.rs
src-tauri/src/shell/: hook_installer.rs  mod.rs  shell_detector.rs
